--- a/LaunchPal/LaunchPal/LaunchPal.csproj
+++ b/LaunchPal/LaunchPal/LaunchPal.csproj
@@ -38,13 +38,25 @@
     <Compile Include="App.cs" />
     <Compile Include="CustomElement\MarginFrame.cs" />
     <Compile Include="Extension\DateExtension.cs" />
+    <Compile Include="Extension\ListExtension.cs" />
     <Compile Include="ExternalApi\ApiManager.cs" />
     <Compile Include="ExternalApi\JsonBase.cs" />
+    <Compile Include="ExternalApi\LaunchLibrary\Request\GetRocket.cs" />
     <Compile Include="ExternalApi\LaunchPal\JsonObject\LaunchPalBase.cs" />
     <Compile Include="ExternalApi\LaunchPal\JsonObject\Mail.cs" />
     <Compile Include="ExternalApi\LaunchPal\Request\HttpCaller.cs" />
     <Compile Include="ExternalApi\LaunchPal\Request\PostMail.cs" />
     <Compile Include="ExternalApi\OpenWeatherMap\Request\GetForecast.cs" />
+    <Compile Include="ExternalApi\PeopleInSpace\JsonObject\PeopleBase.cs" />
+    <Compile Include="ExternalApi\PeopleInSpace\JsonObject\PeopleInSpace.cs" />
+    <Compile Include="ExternalApi\PeopleInSpace\Request\GetPeopleInSpace.cs" />
+    <Compile Include="ExternalApi\PeopleInSpace\Request\HttpCaller.cs" />
+    <Compile Include="ExternalApi\SpaceNews\XmlObject\Error.cs" />
+    <Compile Include="ExternalApi\SpaceNews\XmlObject\NewsBase.cs" />
+    <Compile Include="ExternalApi\SpaceNews\XmlObject\SpaceFlightNowComRSS.cs" />
+    <Compile Include="ExternalApi\SpaceNews\XmlObject\SpaceNewsComRss.cs" />
+    <Compile Include="ExternalApi\SpaceNews\Request\GetSpaceNews.cs" />
+    <Compile Include="ExternalApi\SpaceNews\Request\HttpCaller.cs" />
     <Compile Include="Helper\JsonConverterExtension.cs" />
     <Compile Include="Helper\MailSender.cs" />
     <Compile Include="Helper\Theme.cs" />
@@ -70,9 +82,14 @@
     <Compile Include="Manager\CacheManager.cs" />
     <Compile Include="Manager\TrackingManager.cs" />
     <Compile Include="Model\CacheModel\CacheBase.cs" />
-    <Compile Include="Model\CacheModel\LaunchData.cs" />
+    <Compile Include="Model\CacheModel\CacheData.cs" />
+    <Compile Include="Model\CacheModel\CacheNews.cs" />
+    <Compile Include="Model\CacheModel\CachePeople.cs" />
+    <Compile Include="Model\CacheModel\CacheRocket.cs" />
+    <Compile Include="Model\CacheModel\CacheTracking.cs" />
     <Compile Include="Model\LaunchData.cs" />
     <Compile Include="Model\MenuItem.cs" />
+    <Compile Include="Model\NewsFeed.cs" />
     <Compile Include="Model\Notification.cs" />
     <Compile Include="ExternalApi\OpenWeatherMap\JsonObject\City.cs" />
     <Compile Include="ExternalApi\OpenWeatherMap\JsonObject\Clouds.cs" />
@@ -93,24 +110,33 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Template\AstronoutListTemplate.cs" />
     <Compile Include="Template\MenuListTemplate.cs" />
+    <Compile Include="Template\NewsListTemplate.cs" />
     <Compile Include="Template\SearchListTemplate.cs" />
     <Compile Include="ViewModel\ErrorViewModel.cs" />
     <Compile Include="ViewModel\LaunchPalPlusViewModel.cs" />
     <Compile Include="ViewModel\LaunchViewModel.cs" />
+    <Compile Include="ViewModel\NewsViewModel.cs" />
     <Compile Include="ViewModel\OverviewViewModel.cs" />
+    <Compile Include="ViewModel\AstronautsViewModel.cs" />
+    <Compile Include="ViewModel\RocketViewModel.cs" />
     <Compile Include="ViewModel\SearchViewModel.cs" />
-    <Compile Include="View\Feedback.cs" />
-    <Compile Include="View\Launch.cs" />
+    <Compile Include="View\FeedbackPage.cs" />
+    <Compile Include="View\HelperPages\LoadingPage.cs" />
+    <Compile Include="View\LaunchPage.cs" />
     <Compile Include="View\LaunchPalPlus.cs" />
     <Compile Include="View\MainPage.cs" />
     <Compile Include="View\MapPage.cs" />
-    <Compile Include="View\Navigation.cs" />
-    <Compile Include="View\Overview.cs" />
-    <Compile Include="View\Search.cs" />
-    <Compile Include="View\Settings.cs" />
+    <Compile Include="View\NavigationPage.cs" />
+    <Compile Include="View\NewsPage.cs" />
+    <Compile Include="View\OverviewPage.cs" />
+    <Compile Include="View\AstronautsPage.cs" />
+    <Compile Include="View\RocketPage.cs" />
+    <Compile Include="View\SearchPage.cs" />
+    <Compile Include="View\SettingsPage.cs" />
     <Compile Include="View\HelperPages\WaitingPage.cs" />
-    <Compile Include="View\Web.cs" />
+    <Compile Include="View\WebPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
