--- a/LaunchPal/LaunchPal.UWP/project.json
+++ b/LaunchPal/LaunchPal.UWP/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Microsoft.Toolkit.Uwp.Notifications": "1.2.0",
     "Newtonsoft.Json": "9.0.1",
+    "QueryString.NET": "1.0.0",
     "Xamarin.Forms": "2.3.2.127",
     "Xamarin.Forms.Maps": "2.3.2.127"
   },
